2005-01-06  Benjamin Otte  <otte@gnome.org>

	* gst/games/gstpuzzle.c: (draw_puzzle):
	  don't draw a puzzle if either width or height of tiles would be 0.

2005-01-06  Benjamin Otte  <otte@gnome.org>

	* gst/games/gstpuzzle.c: (gst_puzzle_get_type),
	(gst_puzzle_class_init), (gst_puzzle_finalize):
	  no memleaks, please
	(gst_puzzle_create), (gst_puzzle_init),
	(gst_puzzle_set_property), (gst_puzzle_setup):
	  change initialization code around so we don't reshuffle on resize
	(draw_puzzle):
	  fix another stupid typo

2005-01-06  Benjamin Otte  <otte@gnome.org>

	* gst/games/gstvideoimage.c: (copy_hline_YUY2):
	  fix stupid typo that borked copying on YUY2

2005-01-06  Benjamin Otte  <otte@gnome.org>

	* gst/games/gstpuzzle.c: (draw_puzzle):
	  fix edges when image sizes aren't multiples of tile sizes

2005-01-06  Benjamin Otte  <otte@gnome.org>

	* gst/games/gstpuzzle.c: (gst_puzzle_base_init):
	  make RGB endianness work correctly
	(gst_puzzle_show), (gst_puzzle_swap), (gst_puzzle_move):
	  refactor and fix race with initial shuffling
	(nav_event_handler):
	  allow using the mouse to puzzle
	(draw_puzzle):
	  insist on tiles having width and height as multiples of 4 to get
	  clean YUV image handling
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xvimage_new),
	(gst_xvimagesink_handle_xevents), (gst_xvimagesink_buffer_alloc):
	  s/DEBUG/LOG/ for common messages
	(gst_xvimagesink_navigation_send_event):
	  fix mouse event translation to not include screen PAR
	* sys/ximage/ximagesink.c: (gst_ximagesink_navigation_send_event):
	  fix mouse event translation to actually work

2005-01-06  Stephane LOEUILLET  <stephane.loeuillet@tiscali.fr>

	* gst/asfdemux/gstasfdemux.c:
	(gst_asf_demux_process_ext_content_desc):
	 Extract TrackNumber metadata + clean up code

	* gst/games/gstvideoimage.c: (gst_video_image_draw_rectangle):
	 Hope this is the good fix (var used unitialised)

2005-01-06  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
