@@ -1,3 +1,8 @@
+2005-01-07  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_getcaps):
+	  Fix against template (#150576).
+
 2005-01-06  Benjamin Otte  <otte@gnome.org>
 
 	* gst/games/gstpuzzle.c: (draw_puzzle):
